--- a/MajorWeb/templates/predict2.html
+++ b/MajorWeb/templates/predict2.html
@@ -117,14 +117,38 @@
                         <label style="font-size:20pt;font-weight: 600; margin-top:10px;">Related # @</label>
                         <textarea name="hastags" class="form-control"></textarea>
                     </div>
+
+                    <div class="form-group" style="display: flex;align-items: center;">
+                        <label style="font-size:20pt;font-weight: 600; margin-top:10px;">like & comment
+                            weightage</label>
+                        <div class="range" style="display: flex;align-items: center;">
+                            <small style="display: inline;">0</small>
+                            <div style="display: inline;">
+                                <input id="rangeVal" type="range" class="form-range" id="customRange1" min="0" max="1"
+                                    step="0.001" name="valueA" />
+                            </div>
+                            <small style="display: inline-block;margin-right:20px;">1</small>
+                            <small style="font-size:10pt;font-weight: 200; margin-top:10px;" id="rangeValue"></small>
+
+                        </div>
+                    </div>
                     <div class="form-group">
                         <input type="submit" id="submitBtn" class="btn btn-success" required style="width:100%">
                     </div>
-                </form>
             </div>
+
+
+            </form>
         </div>
+    </div>
 
     </div>
 </body>
+<script>
+    setInterval(function () {
+        console.log($('#rangeVal').val());
+        $('#rangeValue').html($('#rangeVal').val());
+    }, 10)
+</script>
 
 </html>
